# smartPointer

./: CMakeLists.txt
include/: header.hpp
sources/: source.cpp
tests/: test.cpp
